tests/integration/snapshots/integration__conformance__n_object_emoji.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
{🇨🇭}
stdout ---

stderr ---
error: unexpected character `🇨`. expected start of a json value
 --> stdin:1:2
  |
1 | {🇨🇭}
  |  ^
