tests/integration/snapshots/integration__conformance__n_object_garbage_at_end.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdin ---
{"a":"a" 123}
stdout ---

stderr ---
error: expected comma or closed curly brace, found `123`
 --> stdin:1:10
  |
1 | {"a":"a" 123}
  | -   ---- ^^^
  | |   |
  | |   expected due to the preceding key/value pair
  | object opened here by `{`
