tests/integration/snapshots/integration__conformance__n_object_lone_continuation_byte_in_key_and_trailing_comma.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 1
success: false
stdin ---
raw bytes: [123, 34, 185, 34, 58, 34, 48, 34, 44, 125]
stdout ---

stderr ---
error: source did not contain valid utf8
 --> stdin
  |
