tests/integration/snapshots/integration__conformance__n_object_missing_colon.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
{"a" b}
stdout ---

stderr ---
error: unexpected character `b`. expected start of a json value
 --> stdin:1:6
  |
1 | {"a" b}
  |      ^
